# DocSurf

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DocSurf.desktop  DocSurfui.rc  actions.cpp  actions.h  application.cpp  application.h  flow.cpp  flow.h  fsmodel.cpp  fsmodel.h  iconprovider.cpp  iconprovider.h  kdfmui.rc  main.cpp  mainwindow.cpp  mainwindow.h  objects.cpp  objects.h  searchbox.cpp  searchbox.h  tabbar.cpp  tabbar.h  viewanimator.cpp  viewanimator.h  viewcontainer.cpp  viewcontainer.h  widgets.cpp  widgets.h
src/dialogs/: aboutInfo.cpp  aboutInfo.h  configdialog.cpp  configdialog.h  configdialog.ui
src/gfx/: color.cpp  color.h  fx.cpp  fx.h
src/views/: columnview.cpp  columnview.h  detailsview.cpp  detailsview.h  fileplacesview.cpp  fileplacesview.h  flowview.cpp  flowview.h  iconview.cpp  iconview.h
